chore: clean up remaining println. Corrected spacing for awesome search result title

--- a/modules/server/src/main/assets/css/partials/_awesome.scss
+++ b/modules/server/src/main/assets/css/partials/_awesome.scss
@@ -302,7 +302,7 @@
 				display: grid;
 				grid-template-columns: min-content max-content fit-content(150px);
 				grid-column-gap:10px;
-
+				margin-bottom: 7px;
 			}
       h4 {
         margin-top: 0;
